Improve code smell