@@ -123,11 +123,10 @@
               <version>0.2.0</version>
             </path>
           </annotationProcessorPaths>
-          <compilerArgs>
-            <compilerArg>
-              -Amapstruct.defaultComponentModel=spring
-            </compilerArg>
+          <compilerArgs>--enable-preview
           </compilerArgs>
+          <source>21</source>
+          <target>21</target>
         </configuration>
       </plugin>
     </plugins>
